Salesforce CPQ/main/default/objects/ColumnMetadata__c/fields/ColumnValidation__c.field-meta.xml
<CustomField>
    <fullName>ColumnValidation__c</fullName>
    <label>Column Validation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>