Salesforce CPQ/main/default/objects/ColumnMetadata__c/fields/FieldSetMetadata__c.field-meta.xml
<CustomField>
    <fullName>FieldSetMetadata__c</fullName>
    <description>Master detail to FieldSet Metadata.</description>
    <inlineHelpText>FieldSet Metadata relationship.</inlineHelpText>
    <label>FieldSet Metadata</label>
    <referenceTo>FieldSetMetadata__c</referenceTo>
    <relationshipLabel>Columns Metadata</relationshipLabel>
    <relationshipName>ColumnsMetadata</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>