Salesforce CPQ/main/default/objects/ColumnMetadata__c/validationRules/ValidateMinimumPixelSize.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateMinimumPixelSize</fullName>
    <active>true</active>
    <description>Restrict any size that is less than 67 pixels.</description>
    <errorConditionFormula>(FieldColumnSize__c &lt; 67)</errorConditionFormula>
    <errorDisplayField>FieldColumnSize__c</errorDisplayField>
    <errorMessage>Field Column Size cannot be less than 67.</errorMessage>
</ValidationRule>